infra/k8s/security/kguardian/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: atoca-house-internal
      namespace: kube-system
  hostnames:
    - kguardian.atoca.house
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kguardian-frontend
          namespace: kguardian
          port: 5173
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
